--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "fullstack":" concurrently \" npm run backend\" \" npm run frontend \"",
+    "fullstack": " concurrently \" npm run backend\" \" npm run frontend \"",
     "frontend": " cd frontend && npm run dev",
-    "backend":"nodemon backend/index.js"
+    "backend": "nodemon backend/index.js"
   },
   "type": "module",
   "keywords": [],
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "validator": "^13.15.0"
   }
 }
